Add return to home page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,8 +3,8 @@ import { SITE_TITLE } from '../config';
 ---
 
 <header>
-	<h2>
-		{SITE_TITLE}
+	<h2 >
+		<a href="../index.html">{SITE_TITLE}</a> 
 	</h2>
 	<nav>
 		
@@ -16,5 +16,8 @@ import { SITE_TITLE } from '../config';
 	}
 	h2 {
 		margin: 0.5em 0;
+		a {
+			text-decoration: none;
+		}
 	}
 </style>
