Move title to center

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,8 @@ import { SITE_TITLE } from '../config';
 		margin: 0em 0 2em;
 	}
 	h2 {
-		margin: 0.5em 0;
+		margin: 0;
+		text-align: center;
 	}
 	#title {
 		text-decoration: none;
